[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/iu.gd" type="Script" id=1]

[node name="UI" type="Node2D"]
script = ExtResource( 1 )

[node name="VBox" type="VBoxContainer" parent="."]
anchor_left = 10.0
anchor_top = 10.0
anchor_right = 10.0
anchor_bottom = 10.0
margin_left = 801.0
margin_top = 51.0
margin_right = 875.0
margin_bottom = 145.0
rect_scale = Vector2( 1.62854, 1.54789 )

[node name="SpinBoxA" type="SpinBox" parent="VBox"]
margin_right = 74.0
margin_bottom = 24.0
max_value = 1000.0
prefix = "A"

[node name="SpinBoxB" type="SpinBox" parent="VBox"]
margin_top = 28.0
margin_right = 74.0
margin_bottom = 52.0
max_value = 1000.0
prefix = "B"

[node name="ButtonStart" type="Button" parent="VBox"]
margin_top = 56.0
margin_right = 74.0
margin_bottom = 76.0
text = "Iniciar (P)"

[node name="LabelEstado" type="Label" parent="."]
margin_left = 34.0
margin_top = 12.0
margin_right = 234.0
margin_bottom = 26.0
rect_scale = Vector2( 1.5, 1.22318 )
